sass/_posts.scss
.post {
  header {
    margin: 0 0 20px;

    .title {
      margin: 0 0 6px;
    }

    .post-date {
      color: #dedede;
      display: block;
    }
  }

  h2 {
    margin-top: 2em;
  }

  p {
    margin: 0 0 1em;
    line-height: 1.6;
  }

  .highlight {
    font-family: 'Courier New', monospace;
    margin: 0 0 1em;
  }
}

.posts {
  li {
    margin: 80px 0 0;

    &:first-child {
      margin: 0;
    }
  }
}

